# golem-agentic

.github/workflows/: ci.yaml
golem-ts-introspect/: package-lock.json  package.json  pnpm-lock.yaml
golem-ts-reflect/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
golem-ts-reflect/src/: index.ts  metadata.ts  shim.ts  ts-morph-shim.ts
golem-ts-reflect/tests/: metadata.test.ts  setup.ts  util.ts
golem-ts-sdk/: README.md  eslint.config.mjs  package-lock.json  package.json  reflect.config.json  rollup.config.mjs  vitest.config.ts
golem-ts-sdk/src/: AgentClassName.ts  AgentName.ts  agent-Initiator.ts  agent-error.ts  agent-instance-counter.ts  agent-name.ts  agent-registry.ts  agentId.ts  base-agent.ts  baseAgent.ts  client-generation.ts  decorators.ts  index.ts  method-metadata.ts  new-types.ts  resolved-agent.ts  schema.ts  typeMetadata.ts  type_metadata.ts
golem-ts-sdk/src/host/: guard.ts  result.ts
golem-ts-sdk/src/internal/: agentError.ts  agentInitiator.ts  agentInstanceSequence.ts  agentRegistry.ts  branding.ts  clientGeneration.ts  methodMetadata.ts  resolvedAgent.ts  schema.ts
golem-ts-sdk/src/mapping/: analysed-type.ts  type-mapping.ts
golem-ts-sdk/src/new-types/: either.ts  result.ts  text-input.ts
golem-ts-sdk/tests/: agent.name.test.ts  agentsInit.ts  arbitraries.ts  decorator.test.ts  initiator.test.ts  invoke.test.ts  load-types.ts  registry.test.ts  sampleAgents.ts  setup.ts  test-data.ts  testAgents.ts  testData.ts  testSetup.ts  testTypes.ts  testUtils.ts  type.mapping.test.ts  type.number.ordinal.test.ts  utils.ts  value.mapping.test.ts
golem-ts-sdk/types/: exports.d.ts  golem_agent_common.d.ts  golem_agent_host.d.ts  golem_api_1_1_7_host.d.ts  golem_rpc_0_2_2_types.d.ts
golem-ts-typegen/: README.md  eslint.config.mjs  package-lock.json  package.json  rollup.config.mjs
golem-ts-typegen/.metadata/: types.json
golem-ts-typegen/src/: index.ts
golem-ts-typegen/tests/: metadata.test.ts  setup.ts  testData.ts  util.ts
golem-ts-types-core/: package-lock.json  package.json
golem-ts-types-core/src/: index.ts  json-to-type.ts  metadata.ts  shim.ts  symbol.ts  type-json.ts  type-lite.ts  type-to-json.ts
ts-examples/: test.sh
ts-examples/generated_rust/: Cargo.toml  golem.yaml
ts-examples/generated_rust/src/: @golemcloud_golem-ts-sdk.js  bindings.rs  conversions.rs  lib.rs  user-module.js
ts-examples/generated_rust/src/modules/: golem_api_1_1_7_host.rs  mod.rs  wasi_clocks_0_2_3_monotonic_clock.rs
ts-examples/generated_rust/wit-generated/: main.wit
ts-examples/ts-user/: package-lock.json  package.json  rollup.config.mjs  test.sh
wit/: deps.toml  main.wit
(+27 files in other folders)
