[package]
name = "agent-guest"
version = "0.0.1"
edition = "2024"

[workspace]

[profile.release]
opt-level = "s"
lto = true

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = ["http", "logging"]
http = ["dep:reqwest"]
logging = ["dep:log", "dep:wasi-logger"]

[dependencies]
# Core dependencies
rquickjs = { version = "0.9.0", default-features = false, features = ["futures", "bindgen", "loader", "macro"] }

encoding_rs = "0.8.35"
futures = { version = "0.3.31", features = [] }
futures-concurrency = "7.6.3"
pin-project = "1.1.10"
wasi = "0.12.1+wasi-0.2.0"
wasi-async-runtime = "0.1.2"
wit-bindgen-rt = { version = "0.42.1", features = ["bitflags"] }

# HTTP
reqwest = { git = "https://github.com/golemcloud/reqwest", branch = "update-july-2025", features = ["async"], optional = true }

# Logging
log = { version = "0.4.22", default-features = false, optional = true }
wasi-logger = { version = "0.1.2", default-features = false, optional = true }

[package.metadata.component.bindings]
ownership = "owning"

[package.metadata.component.target]

[package.metadata.component.target.dependencies]

[package.metadata.component.target.dependencies."wasi:io"]
path = "wit/deps/io"

[package.metadata.component.target.dependencies."wasi:clocks"]
path = "wit/deps/clocks"

[package.metadata.component.target.dependencies."golem:rpc"]
path = "wit/deps/golem-rpc"

[package.metadata.component.target.dependencies."golem:api"]
path = "wit/deps/golem-1.x"

[package.metadata.component.target.dependencies."golem:agent"]
path = "wit/deps/golem-agent"

[package.metadata.component.target.dependencies."golem:durability"]
path = "wit/deps/golem-durability"

[package.metadata.component.target.dependencies."unused:main"]
path = "wit/deps/all"

[package.metadata.component.target.dependencies."wasi:blobstore"]
path = "wit/deps/blobstore"

[package.metadata.component.target.dependencies."wasi:filesystem"]
path = "wit/deps/filesystem"

[package.metadata.component.target.dependencies."wasi:sockets"]
path = "wit/deps/sockets"

[package.metadata.component.target.dependencies."wasi:random"]
path = "wit/deps/random"

[package.metadata.component.target.dependencies."wasi:cli"]
path = "wit/deps/cli"

[package.metadata.component.target.dependencies."wasi:config"]
path = "wit/deps/config"

[package.metadata.component.target.dependencies."wasi:http"]
path = "wit/deps/http"

[package.metadata.component.target.dependencies."wasi:keyvalue"]
path = "wit/deps/keyvalue"

[package.metadata.component.target.dependencies."wasi:logging"]
path = "wit/deps/logging"
